2003-09-27  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/RTFDoc.py: Fixed double printing of lines

2003-09-26  Lorenzo Cappelletti  <lorenzo.cappelletti@email.it>
	* src/po/it.po: Italian translation.

2003-09-25  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/DetAncestralReport.py: Fix translatable string.
	* src/plugins/rel_ru.py: Add more possible language codes.
	* doc/gramps-manual/C/figures/family-alt.png: Add figure.
	* doc/gramps-manual/C/figures/family.png: Update figure.
	* doc/gramps-manual/C/figures/places.png: Update figure.

2003-09-24  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/WriteFTree.py: increment the count properly

2003-09-23  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EventEditor.py: Fix destroy window callback
	* src/dialog.glade: removed unused callbacks

2003-09-22  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/po/ru.po: Update Russian translation. 
	* doc/gramps-manual/C/gramps-manual.xml: Update manual.
	* doc/gramps-manual/C/filtref.xml: Add file -- split appendix 
	into a separate file.
	* doc/gramps-manual/C/cmdline.xml: Likewise.
	* doc/gramps-manual/C/getstart.xml: Likewise.
	* doc/gramps-manual/C/mainwin.xml: Likewise.
	* doc/gramps-manual/C/usage.xml: Likewise.
	* doc/gramps-manual/C/custom.xml: Likewise.
	* doc/gramps-manual/C/Makefile.am: Ship new files. 
	* doc/gramps-manual/C/Makefile.in: Likewise. 
	* src/latin_utf8.py (latin_to_utf8): Convert to unicode only if needed. 
	* doc/gramps-manual/C/figures/cfe-ar.png: Add figure. 
	* doc/gramps-manual/C/figures/bookreport.png: Update figure. 
	* doc/gramps-manual/C/figures/gedcom-export.png: Likewise. 
	* doc/gramps-manual/C/figures/first-open.png: Likewise. 
	* doc/gramps-manual/C/figures/mainwin.png: Likewise. 
	* doc/gramps-manual/C/figures/side-filt.png: Likewise. 
	* doc/gramps-manual/C/figures/sources.png: Likewise. 
	* doc/gramps-manual/C/figures/media.png: Likewise. 
